Maquetacion de la launching page - a falta de encuesta, newsletter

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Foundation 4</title>
+  <title>Mundo Ludic</title>
 
   
   <link rel="stylesheet" href="stylesheets/app.css">
@@ -17,85 +17,134 @@
 </head>
 <body>
 
-	<div class="row">
-		<div class="large-12 columns">
-			<h2>Welcome to Foundation</h2>
-			<p>This is version 4.3.1.</p>
-			<hr />
+	<div id="header">
+
+		<div class="row">
+			<div class="larg-12 columns social-nav right">
+				<a href="https://www.facebook.com/pages/MUNDO-LUDIC/330633617068232" target="_blank"><img class="facebook" src="images/icons/social-icon-empty.png"></a>
+				<a href="https://twitter.com/MundoLudic" target="_blank"><img class="twitter" src="images/icons/social-icon-empty.png"></a>
 		</div>
+
+		</div>
+
+		<div class="row">
+			<div class="large-12 columns center">
+				<a href=""><img class="logo" src="images/logo-empty.png"></a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="large-12 columns center eslogan">
+				<a href="#" data-reveal-id="votar-eslogan">Ayúdanos a elegir nuestro eslógan!</a>
+			</div>
+		</div>
+
+		<div class="larg-12 columns launching center">
+			<h3>En breve estaremos con vosotros, estamos trabajando con intensidad para daros un buen servicio.</h3>
+		</div>
+
 	</div>
 
-	<div class="row">
-		<div class="large-8 columns">
-			<h3>The Grid</h3>
-
-			<!-- Grid Example -->
-			<div class="row">
-				<div class="large-12 columns">
-					<div class="panel">
-						<p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-6 columns">
-					<div class="panel">
-						<p>Six columns</p>
-					</div>
-				</div>
-				<div class="large-6 columns">
-					<div class="panel">
-						<p>Six columns</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-4 columns">
-					<div class="panel">
-						<p>Four columns</p>
-					</div>
-				</div>
-				<div class="large-4 columns">
-					<div class="panel">
-						<p>Four columns</p>
-					</div>
-				</div>
-				<div class="large-4 columns">
-					<div class="panel">
-						<p>Four columns</p>
-					</div>
-				</div>
-			</div>
-
-			<h3>Buttons</h3>
-
-      <div class="row">
-        <div class="large-6 columns">
-          <p><a href="#" class="small button">Small Button</a></p>
-          <p><a href="#" class="button">Medium Button</a></p>
-          <p><a href="#" class="large button">Large Button</a></p>
-        </div>
-        <div class="large-6 columns">
-          <p><a href="#" class="small alert button">Small Alert Button</a></p>
-          <p><a href="#" class="success button">Medium Success Button</a></p>
-          <p><a href="#" class="large secondary button">Large Secondary Button</a></p>
-        </div>
-      </div>
-		</div>
-
-		<div class="large-4 columns">
-			<h4>Getting Started</h4>
-			<p>We're stoked you want to try Foundation! To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-
-			<h4>Other Resources</h4>
-			<p>Once you've exhausted the fun in this document, you should check out:</p>
-			<ul class="disc">
-				<li><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</li>
-				<li><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</li>
-				<li><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</li>
-			</ul>
+	<div class="newsletter">
+		<div class="row">
+  		<div class="large-6 large-centered columns">
+  			<form>
+			<div class="row collapse">
+				<label>Recibirás todas las novedades</label>
+		        <div class="small-10 columns">
+		          <input type="text" placeholder="Escribe tú email">
+		        </div>
+		        <div class="small-2 columns">
+		          <a href="#" class="button prefix">Enviar</a>
+		        </div>
+	      	</div>
+			</form>
 		</div>
 	</div>
+	</div>
+
+	<div class=" large-12 columns main">
+
+		<div class="row">
+
+			<div class="large-12 columns">
+				<h2>MUNDO LUDIC es un directorio web para la búsqueda y contratación de actividades de animación lúdicas, culturales y educativas.</h2>
+			</div>
+
+		</div>
+
+		<div class="row">
+
+			<div class="large-8 large-centered columns carrusel">
+					<ul data-orbit>
+					  <li>
+					    <img src="images/carrusel/carrusel01.jpg" />
+					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					  </li>
+					  <li>
+					    <img src="images/carrusel/carrusel02.jpg" />
+					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					  </li>
+					  <li>
+					    <img src="images/carrusel/carrusel03.jpg" />
+					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					  </li>
+					  <li>
+					    <img src="images/carrusel/carrusel04.jpg" />
+					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					  </li>
+					  <li>
+					    <img src="images/carrusel/carrusel05.jpg" />
+					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					  </li>
+					</ul>
+			</div>
+
+		</div>
+
+	</div>
+
+	<div class="large-12 columns footer">
+			<div class="row">
+				<div class="large-12 columns center">
+					<a href=""><img class="logo-foot" src="images/logo-empty.png"></a>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="large-12 columns center eslogan-foot">
+					<a href="#" data-reveal-id="votar-eslogan">Ayúdanos a elegir nuestro eslógan!</a>
+				</div>
+			</div>
+
+			<div class="row">
+			  <div class="large-12 columns">
+			  		<div class="small-6 columns copy">
+			  	<h7>&copy;&nbsp;Mundo Ludic</h7>
+			  	</div>
+				  	<div class="small-6 columns right">
+				  	<a href="https://www.facebook.com/pages/MUNDO-LUDIC/330633617068232" target="_blank"><img class="facebook-foot" src="images/icons/social-icon-empty.png"></a>
+							<a href="https://twitter.com/MundoLudic" target="_blank"><img class="twitter-foot" src="images/icons/social-icon-empty.png"></a>
+					</div>
+			  </div>
+			</div>
+
+	</div>
+
+
+	<div id="votar-eslogan" class="reveal-modal medium">
+	  <h7>Ayúdanos a elegir nuestro eslógan!</h7>
+	  <form class="custom">
+	  	<div class="large-4 columns">
+	      <label for="radio1"><input name="radio1" type="radio" id="radio1" style="display:none;" CHECKED><span class="custom radio checked"></span> Radio Button 1</label>
+      	<label for="radio1"><input name="radio1" type="radio" id="radio1" style="display:none;"><span class="custom radio"></span> Radio Button 2</label>
+      	<label for="radio1"><input name="radio1" type="radio" id="radio1" style="display:none;"><span class="custom radio"></span> Radio Button 3</label>
+	    </div>
+	  </form>
+
+	  <a class="close-reveal-modal">&#215;</a>
+	</div>
+
 
   <script>
   document.write('<script src=' +
@@ -135,7 +184,40 @@
 	
 	<script src="javascripts/foundation/foundation.topbar.js"></script>
 	
-  
+  <script>
+
+  $(document).foundation('orbit', {
+  animation: 'fade',
+  timer_speed: 10000,
+  pause_on_hover: true,
+  resume_on_mouseout: false,
+  animation_speed: 500,
+  stack_on_small: true,
+  navigation_arrows: true,
+  slide_number: false,
+  container_class: 'orbit-container',
+  stack_on_small_class: 'orbit-stack-on-small',
+  next_class: 'orbit-next',
+  prev_class: 'orbit-prev',
+  timer_container_class: 'orbit-timer',
+  timer_paused_class: 'paused',
+  timer_progress_class: 'orbit-progress',
+  slides_container_class: 'orbit-slides-container',
+  bullets_container_class: 'orbit-bullets',
+  bullets_active_class: 'active',
+  slide_number_class: 'orbit-slide-number',
+  caption_class: 'orbit-caption',
+  active_slide_class: 'active',
+  orbit_transition_class: 'orbit-transitioning',
+  bullets: true,
+  timer: true,
+  variable_height: false,
+  before_slide_change: function(){},
+  after_slide_change: function(){}
+});
+
+  </script>
+
   <script>
     $(document).foundation();
   </script>
