cambios en el eslogan, visualizamos las 3 definiciones, ver carrusel en todos los dispositivos

--- a/index.html
+++ b/index.html
@@ -32,14 +32,22 @@
 		</div>
 
 		<div class="row">
-			<div class="large-12 columns center eslogan">
-				<a href="#" data-reveal-id="votar-eslogan">Ayúdanos a elegir nuestro eslógan!</a>
+			<div class="large-12 columns center">
+				<h3>En MUNDO LUDIC estamos buscando un eslogan.</h3>
 			</div>
 		</div>
 
-		<div class="larg-12 columns launching center">
-			<h3>En breve estaremos con vosotros, estamos trabajando con intensidad para daros un buen servicio.</h3>
+		<div class="row">
+			<div class="large-12 columns center eslogan">
+				<a href="#">AYUDANOS!!!</a>
+			</div>
 		</div>
+
+			<div class="larg-12 columns center launching">
+				<h3>En breve estaremos con vosotros, estamos trabajando con muchas ganas para daros un buen servicio.</h3>
+			</div>
+
+		<div class="row"></div>
 
 	</div>
 
@@ -73,27 +81,38 @@
 
 		<div class="row">
 
+			<div class="large-12 columns">
+				<h2>MUNDO LUDIC está creando una comunidad online donde los usuarios aportan sus opiniones, porque creemos en la web 100% colaborativa.</h2>
+			</div>
+
+		</div>
+
+		<div class="row">
+
+			<div class="large-12 columns">
+				<h2>MUNDO LUDIC es el punto de encuentro entre proveedores de actividades artísticas, lúdicas y culturales y TÚ”.</h2>
+			</div>
+
+		</div>
+
+		<div class="row">
+
 			<div class="large-8 large-centered columns carrusel">
 					<ul data-orbit>
 					  <li>
-					    <img src="images/carrusel/carrusel01.jpg" />
-					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					    <img src="images/carrusel/carrusel1.jpg" />
 					  </li>
 					  <li>
-					    <img src="images/carrusel/carrusel02.jpg" />
-					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					    <img src="images/carrusel/carrusel2.jpg" />
 					  </li>
 					  <li>
-					    <img src="images/carrusel/carrusel03.jpg" />
-					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					    <img src="images/carrusel/carrusel3.jpg" />
 					  </li>
 					  <li>
-					    <img src="images/carrusel/carrusel04.jpg" />
-					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					    <img src="images/carrusel/carrusel4.jpg" />
 					  </li>
 					  <li>
-					    <img src="images/carrusel/carrusel05.jpg" />
-					    <div class="orbit-caption">Actividad, bla, bla, bla....</div>
+					    <img src="images/carrusel/carrusel5.jpg" />
 					  </li>
 					</ul>
 			</div>
@@ -185,33 +204,33 @@
   <script>
 
   $(document).foundation('orbit', {
-  animation: 'fade',
-  timer_speed: 10000,
-  pause_on_hover: true,
-  resume_on_mouseout: false,
-  animation_speed: 500,
-  stack_on_small: true,
-  navigation_arrows: true,
-  slide_number: false,
-  container_class: 'orbit-container',
-  stack_on_small_class: 'orbit-stack-on-small',
-  next_class: 'orbit-next',
-  prev_class: 'orbit-prev',
-  timer_container_class: 'orbit-timer',
-  timer_paused_class: 'paused',
-  timer_progress_class: 'orbit-progress',
-  slides_container_class: 'orbit-slides-container',
-  bullets_container_class: 'orbit-bullets',
-  bullets_active_class: 'active',
-  slide_number_class: 'orbit-slide-number',
-  caption_class: 'orbit-caption',
-  active_slide_class: 'active',
-  orbit_transition_class: 'orbit-transitioning',
-  bullets: true,
-  timer: true,
-  variable_height: false,
-  before_slide_change: function(){},
-  after_slide_change: function(){}
+	  animation: 'fade',
+	  timer_speed: 7000,
+	  pause_on_hover: false,
+	  resume_on_mouseout: false,
+	  animation_speed: 700,
+	  stack_on_small: true,
+	  navigation_arrows: true,
+	  slide_number: false,
+	  container_class: 'orbit-container',
+	  stack_on_small_class: 'orbit-stack-on-small',
+	  next_class: 'orbit-next',
+	  prev_class: 'orbit-prev',
+	  timer_container_class: 'orbit-timer',
+	  timer_paused_class: 'paused',
+	  timer_progress_class: 'orbit-progress',
+	  slides_container_class: 'orbit-slides-container',
+	  bullets_container_class: 'orbit-bullets',
+	  bullets_active_class: 'active',
+	  slide_number_class: 'orbit-slide-number',
+	  caption_class: 'orbit-caption',
+	  active_slide_class: 'active',
+	  orbit_transition_class: 'orbit-transitioning',
+	  bullets: true,
+	  timer: true,
+	  variable_height: false,
+	  before_slide_change: function(){},
+	  after_slide_change: function(){}
 });
 
   </script>
