subir los textos en catalan

--- a/cat/index.html
+++ b/cat/index.html
@@ -40,18 +40,18 @@
 
 		<div class="row">
 			<div class="large-12 columns center">
-				<h3>En MUNDO LUDIC estamos buscando un eslogan.</h3>
+				<h3>A MUNDO LUDIC estem buscant eslògan.</h3>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="large-12 columns center eslogan">
-				<a href="https://apps.facebook.com/my-polls/lknxd" target="_blank">AYUDANOS!!!</a>
+				<a href="https://apps.facebook.com/my-polls/lknxd" target="_blank">AJUDA'NS!!!</a>
 			</div>
 		</div>
 
 			<div class="larg-12 columns center launching">
-				<h3>En breve estaremos con vosotros, estamos trabajando con muchas ganas para daros un buen servicio.</h3>
+				<h3>En breu estarem amb vosaltres, estem treballant amb moltes ganes per a donar-vos un bon servei.</h3>
 			</div>
 
 		<div class="row"></div>
@@ -66,8 +66,8 @@
 
 				<form action="http://mundoludic.us7.list-manage.com/subscribe/post?u=7f51d04fa6023efaada86c1dd&amp;id=e2c6c5ad8e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 				<div class="large-12 columns">
-					<h7>Si deseas recibir todas las novedades</h7>
-					<input type="submit" value="Subscríbete" name="subscribe" id="mc-embedded-subscribe" class="button">
+					<h7>Si desitges rebre totes les novetats</h7>
+					<input type="submit" value="subscriu-t'hi" name="subscribe" id="mc-embedded-subscribe" class="button">
 				</div>
 
 				</form>
@@ -83,7 +83,7 @@
 		<div class="row">
 
 			<div class="large-12 columns">
-				<h2>MUNDO LUDIC es un directorio web para la búsqueda y contratación de actividades de animación lúdicas, culturales y educativas.</h2>
+				<h2>MUNDO LUDIC és un directori web per a la recerca i contractació d'activitats d'animació lúdiques, culturals i educatives.</h2>
 			</div>
 
 		</div>
@@ -91,7 +91,7 @@
 		<div class="row">
 
 			<div class="large-12 columns">
-				<h2>MUNDO LUDIC está creando una comunidad online donde los usuarios aportan sus opiniones, porque creemos en la web 100% colaborativa.</h2>
+				<h2>MUNDO LUDIC està creant una comunitat online on els usuaris aporten la seva opinió, perquè creiem en el web 100% col.laboratiu.</h2>
 			</div>
 
 		</div>
@@ -99,7 +99,7 @@
 		<div class="row">
 
 			<div class="large-12 columns">
-				<h2>MUNDO LUDIC es el punto de encuentro entre proveedores de actividades artísticas, lúdicas y culturales y TÚ”.</h2>
+				<h2>MUNDO LUDIC és el punt de trobada entre proveïdors d'activitats artístiques, lúdiques i culturals i TU.</h2>
 			</div>
 
 		</div>
@@ -139,13 +139,13 @@
 
 			<div class="row">
 				<div class="large-12 columns center">
-					<h4>En MUNDO LUDIC estamos buscando un eslogan.</h4>
+					<h4>A MUNDO LUDIC estem buscant eslògan.</h4>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="large-12 columns center eslogan-foot">
-					<a href="https://apps.facebook.com/my-polls/lknxd" target="_blank">AYUDANOS!!!</a>
+					<a href="https://apps.facebook.com/my-polls/lknxd" target="_blank">AJUDA'NS!!</a>
 				</div>
 			</div>
 
@@ -232,7 +232,7 @@
 
     	//manejamos el idioma
 
-    	localStorage["mundoludic-idioma"] = "cas";
+    	localStorage["mundoludic-idioma"] = "cat";
 
     	//si venimos del index por primera vez le damos a elegir idioma
     	// if(document.referrer=="http://localhost/sites/mundo-ludic/launching-page/"){
