Pequeñas modificaciones con los idiomas, primera version subida a produccion

--- a/cat/index.html
+++ b/cat/index.html
@@ -5,12 +5,18 @@
 
 <head>
 	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Mundo Ludic</title>
+  	<meta name="viewport" content="width=device-width">
+  	<meta name="description" content="MUNDO LUDIC és un directori web per a la recerca i contractació d'activitats d'animació lúdiques, culturals i educatives.">
+	<meta name="keywords" content="activitats, lúdiques, culturals, educatives">
+	<meta name="author" content="@marioip - Mario Iglesias">
 
-  <link rel="stylesheet" href="../stylesheets/app.css">
+  	<title>Mundo Ludic - Activitats d'animació lúdiques, culturals i educatives.</title>
 
-  <script src="../javascripts/vendor/custom.modernizr.js"></script>
+  	<link rel="stylesheet" href="../stylesheets/app.css">
+
+  	<link rel="shortcut icon" href="../images/mundoludic_ico.png" type="image/png" />
+
+  	<script src="../javascripts/vendor/custom.modernizr.js"></script>
 
 </head>
 <body>
@@ -99,7 +105,7 @@
 		<div class="row">
 
 			<div class="large-12 columns">
-				<h2>MUNDO LUDIC és el punt de trobada entre proveïdors d'activitats artístiques, lúdiques i culturals i TU.</h2>
+				<h2>MUNDO LUDIC és el punt de trobada entre proveïdors d'activitats lúdiques, culturals i educatives i TU.</h2>
 			</div>
 
 		</div>
