--- a/cas/index.html
+++ b/cas/index.html
@@ -5,12 +5,18 @@
 
 <head>
 	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Mundo Ludic</title>
+  	<meta name="viewport" content="width=device-width">
+  	<meta name="description" content="MUNDO LUDIC es un directorio web para la búsqueda y contratación de actividades de animación lúdicas, culturales y educativas.">
+	<meta name="keywords" content="animación, lúdicas, culturales, educativas">
+	<meta name="author" content="@marioip - Mario Iglesias">
 
-  <link rel="stylesheet" href="../stylesheets/app.css">
+  	<title>Mundo Ludic - Actividades de animación lúdicas, culturales y educativas.</title>
 
-  <script src="../javascripts/vendor/custom.modernizr.js"></script>
+  	<link rel="stylesheet" href="../stylesheets/app.css">
+
+  	<link rel="shortcut icon" href="../images/mundoludic_ico.png" type="image/png" />
+
+  	<script src="../javascripts/vendor/custom.modernizr.js"></script>
 
 </head>
 <body>
@@ -99,7 +105,7 @@
 		<div class="row">
 
 			<div class="large-12 columns">
-				<h2>MUNDO LUDIC es el punto de encuentro entre proveedores de actividades artísticas, lúdicas y culturales y TÚ”.</h2>
+				<h2>MUNDO LUDIC es el punto de encuentro entre proveedores de actividades lúdicas, culturales y educativas y TÚ.</h2>
 			</div>
 
 		</div>
