--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 
 <head>
 	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Mundo Ludic</title>
+  	<meta name="viewport" content="width=device-width">
+  	<meta name="description" content="MUNDO LUDIC es un directorio web para la búsqueda y contratación de actividades de animación lúdicas, culturales y educativas.">
+	<meta name="keywords" content="animación, lúdicas, culturales, educativas">
+	<meta name="author" content="@marioip - Mario Iglesias">
+
+  	<title>Mundo Ludic - Actividades de animación lúdicas, culturales y educativas.</title>
 
   <link rel="stylesheet" href="stylesheets/app.css">
 
+  <link rel="shortcut icon" href="images/mundoludic_ico.png" type="image/png" />
 
 	<script>
 
