Ya tenemos eslogan y por supuesto se actualiza en la web ;)

--- a/cas/index.html
+++ b/cas/index.html
@@ -43,16 +43,10 @@
 				<a href=""><img class="logo" src="../images/logo-empty.png"></a>
 			</div>
 		</div>
-
+		<br>
 		<div class="row">
 			<div class="large-12 columns center">
-				<h3>En MUNDO LUDIC estamos buscando un eslogan.</h3>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="large-12 columns center eslogan">
-				<a href="https://apps.facebook.com/my-polls/lknxd" target="_blank">AYUDANOS!!!</a>
+				<h3 style="font-size:1.5em">Mueve el Mundo. Mundo Ludic.</h3>
 			</div>
 		</div>
 
