--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 				</div>
 			</div>
 		<div class="row">
+			<div class="large-12 columns center">
+				<h3 style="font-size:1.5em;color:#4d4d4d;margin-bottom:40px;">Mueve el Mundo. Mundo Ludic.</h3>
+			</div>
+		</div>
+		<div class="row">
 			<div class="large-12 columns center modal-title">
 				<h7>Quiero ver la página en / Vull veure la pàgina en:</h7>
 			</div>
