Actualizacion del eslogan en el pie de pagina

--- a/cat/index.html
+++ b/cat/index.html
@@ -139,13 +139,7 @@
 
 			<div class="row">
 				<div class="large-12 columns center">
-					<h4>A MUNDO LUDIC estem buscant eslògan.</h4>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="large-12 columns center eslogan-foot">
-					<a href="https://apps.facebook.com/my-polls/lknxd" target="_blank">AJUDA'NS!!</a>
+					<h4 style="margin: 40px 0px 40px 0px;">Mueve el Mundo. Mundo Ludic.</h4>
 				</div>
 			</div>
 
