--- a/cas/index.html
+++ b/cas/index.html
@@ -6,11 +6,11 @@
 <head>
 	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width">
-  	<meta name="description" content="MUNDO LUDIC es un directorio web para la búsqueda y contratación de actividades de animación lúdicas, culturales y educativas.">
+  	<meta name="description" content="Tu directorio web para encontrar actividades lúdicas, educativas y culturales.">
 	<meta name="keywords" content="animación, lúdicas, culturales, educativas">
 	<meta name="author" content="@marioip - Mario Iglesias">
 
-  	<title>Mundo Ludic - Actividades de animación lúdicas, culturales y educativas.</title>
+  	<title>Mundo Ludic - Encuentra tu actividad lúdica</title>
 
   	<link rel="stylesheet" href="../stylesheets/app.css">
 
@@ -31,9 +31,8 @@
 					<li><a href="../cat/">Català</a></li>
 				</ul>
 			</div>
-			<div class="small-4 columns social-nav right">
-				<a href="https://www.facebook.com/pages/MUNDO-LUDIC/330633617068232" target="_blank"><img class="facebook" src="../images/icons/social-icon-empty.png"></a>
-				<a href="https://twitter.com/MundoLudic" target="_blank"><img class="twitter" src="../images/icons/social-icon-empty.png"></a>
+			<div class="small-4 columns right content-area">
+				<a href="http://www.mundoludic.com/login/" class="btn-area">Área proveedores</a>
 			</div>
 
 		</div>
@@ -48,6 +47,10 @@
 			<div class="large-12 columns center">
 				<h3 style="font-size:1.5em">Mueve el Mundo. Mundo Ludic.</h3>
 			</div>
+		</div>
+		<div class="larg-12 columns center social-nav">
+		<a href="https://www.facebook.com/pages/MUNDO-LUDIC/330633617068232" target="_blank"><img class="facebook" src="../images/icons/social-icon-empty.png"></a>
+				<a href="https://twitter.com/MundoLudic" target="_blank"><img class="twitter" src="../images/icons/social-icon-empty.png"></a>
 		</div>
 
 			<div class="larg-12 columns center launching">
