--- a/cat/index.html
+++ b/cat/index.html
@@ -6,11 +6,11 @@
 <head>
 	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width">
-  	<meta name="description" content="MUNDO LUDIC és un directori web per a la recerca i contractació d'activitats d'animació lúdiques, culturals i educatives.">
+  	<meta name="description" content="El teu directori web per a la recerca d'activitats lúdiques, educatives i culturals.">
 	<meta name="keywords" content="activitats, lúdiques, culturals, educatives">
 	<meta name="author" content="@marioip - Mario Iglesias">
 
-  	<title>Mundo Ludic - Activitats d'animació lúdiques, culturals i educatives.</title>
+  	<title>Mundo Ludic - Troba la teva activitat lúdica</title>
 
   	<link rel="stylesheet" href="../stylesheets/app.css">
 
@@ -25,15 +25,14 @@
 
 		<div class="row">
 
-			<div class="small-4 columns left idioma">
+			<div class="small-6 columns left idioma">
 				<ul>
 					<li><a href="../cas/">Castellano</a></li>&nbsp;/&nbsp;
 					<li>Català</li>
 				</ul>
 			</div>
-			<div class="small-4 columns social-nav right">
-				<a href="https://www.facebook.com/pages/MUNDO-LUDIC/330633617068232" target="_blank"><img class="facebook" src="../images/icons/social-icon-empty.png"></a>
-				<a href="https://twitter.com/MundoLudic" target="_blank"><img class="twitter" src="../images/icons/social-icon-empty.png"></a>
+			<div class="small-6 columns right content-area">
+				<a href="http://www.mundoludic.com/login/" class="btn-area">Àrea proveïdors</a>
 			</div>
 
 		</div>
@@ -49,7 +48,10 @@
 				<h3 style="font-size:1.5em">Mueve el Mundo. Mundo Ludic.</h3>
 			</div>
 		</div>
-
+<div class="larg-12 columns center social-nav">
+		<a href="https://www.facebook.com/pages/MUNDO-LUDIC/330633617068232" target="_blank"><img class="facebook" src="../images/icons/social-icon-empty.png"></a>
+				<a href="https://twitter.com/MundoLudic" target="_blank"><img class="twitter" src="../images/icons/social-icon-empty.png"></a>
+		</div>
 			<div class="larg-12 columns center launching">
 				<h3>En breu estarem amb vosaltres, estem treballant amb moltes ganes per a donar-vos un bon servei.</h3>
 			</div>
