--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <head>
 	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width">
-  	<meta name="description" content="MUNDO LUDIC es un directorio web para la búsqueda y contratación de actividades de animación lúdicas, culturales y educativas.">
+  	<meta name="description" content="Tu directorio web para encontrar actividades lúdicas, educativas y culturales.">
 	<meta name="keywords" content="animación, lúdicas, culturales, educativas">
 	<meta name="author" content="@marioip - Mario Iglesias">
 
-  	<title>Mundo Ludic - Actividades de animación lúdicas, culturales y educativas.</title>
+  	<title>Mundo Ludic - Encuentra tu actividad lúdica</title>
 
   <link rel="stylesheet" href="stylesheets/app.css">
 
