--- a/cas/index.html
+++ b/cas/index.html
@@ -160,7 +160,7 @@
 
 			<div class="row">
 				<div class="large-12 columns center">
-					<a href="" class="button">Contacto</a>
+					<a href="contacto.html" class="button">Contacto</a>
 					<br>
 				</div>
 			</div>
